# SNN_NMNIST

./: .gitignore  .tool-versions  README.md  config.txt  deployment.py  main.py  nmnist.py  pyproject.toml  snn.py  snn_training.ipynb  spikes.txt  weights_1.coe  weights_2.coe  weights_3.coe  weights_4.coe
datasets/: base_dataset.py  load.py
datasets/cifar/: README.txt  cifar.py
datasets/ncaltech/: ncaltech.py
datasets/nmnist/: nmnist.py
utils/: deploy.py  deployment.py
