[tool.poetry]
name = "snn"
version = "0.1.0"
description = ""
authors = ["vimzoomer <pelczarskik@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
lava-dl = {git = "https://github.com/lava-nc/lava-dl.git"}
jupyter = "^1.1.1"
notebook = "^7.4.3"
ipykernel = "^6.29.5"
h5py = "^3.15.1"
aedat = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
